# tinymist

./: Cargo.toml  package.json  tree.txt
.github/workflows/: auto-tag.yml  ci.yml  detect-pr-tag.yml  release-nightly.yml
contrib/nix/dev/: flake.nix
crates/crityp/: Cargo.toml
crates/crityp/src/: lib.rs
crates/sync-lsp/src/: msg.rs  server.rs
crates/tinymist/: Cargo.toml  package.json  vite.config.js
crates/tinymist-analysis/src/: sig.rs  track_values.rs
crates/tinymist-cli/: Cargo.toml
crates/tinymist-cli/src/: main.rs
crates/tinymist-dap/src/: lib.rs
crates/tinymist-debug/src/: cov.rs
crates/tinymist-derive/: Cargo.toml
crates/tinymist-l10n/: Cargo.toml
crates/tinymist-lint/src/: lib.rs
crates/tinymist-package/: Cargo.toml
crates/tinymist-project/: Cargo.toml
crates/tinymist-project/src/: compiler.rs  entry.rs  lsp.rs
crates/tinymist-query/: Cargo.toml
crates/tinymist-query/src/: analysis.rs  code_context.rs  completion.rs  diagnostics.rs  hover.rs  lsp_typst_boundary.rs  package.rs  prepare_rename.rs  references.rs  rename.rs  tests.rs
crates/tinymist-std/: Cargo.toml
crates/tinymist-task/: Cargo.toml
crates/tinymist-task/src/: compute.rs  primitives.rs
crates/tinymist-vfs/: Cargo.toml
crates/tinymist-world/: Cargo.toml
crates/typst-preview/: Cargo.toml
crates/typst-preview/src/: lib.rs  outline.rs
crates/typst-preview/src/actor/: editor.rs  render.rs  webview.rs
editors/vscode/: CHANGELOG.md  package.json
scripts/: nightly-utils.mjs
syntaxes/textmate/: package.json
tests/e2e/: main.rs
tests/e2e/e2e/: cli.rs  (+1 more)
(+61 files in other folders)
