[package]
name = "tinymist-preview"
description = "A previewer for the Typst typesetting system."
license = "MIT"
repository = "https://github.com/Enter-tainer/typst-preview"
version.workspace = true
authors = ["The Typst Project Developers"]
edition.workspace = true
keywords = ["typst"]
include = ["src/**/*", "/LICENSE", "/README.md"]
rust-version.workspace = true

[dependencies]
typst.workspace = true
typst-macros.workspace = true
typst-timing.workspace = true
tinymist-assets.workspace = true
tinymist-std.workspace = true
typst-assets.workspace = true
comemo.workspace = true

reflexo-vec2svg.workspace = true
reflexo-typst.workspace = true
tokio.workspace = true
env_logger.workspace = true
log.workspace = true
serde_json.workspace = true
futures.workspace = true
indexmap.workspace = true
serde.workspace = true
parking_lot.workspace = true
sync-ls.workspace = true

wasmtimer = { version = "0.4.2", optional = true }

clap = { workspace = true, optional = true }
wasm-bindgen-futures.workspace = true
async-trait.workspace = true
base64.workspace = true

hyper-tungstenite = { workspace = true, optional = true }

[features]

default = [ "no-content-hint" ]

web = [ "wasmtimer" ]
system = [ "hyper-tungstenite" ]

# Disable the default content hint.
# This requires modifying typst.
no-content-hint = ["reflexo-typst/no-content-hint"]

[lints]
workspace = true
